--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ name = "baru"
 version = "0.1.0"
 authors = [ "CoBloX Team <team@coblox.tech>" ]
 edition = "2018"
+license-file = "LICENSE"
 
 [dependencies]
 anyhow = "1"
