--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ env_logger = "0.8.3"
 hex = "0.4"
 hmac = "0.10"
 log = "0.4"
+rand = "0.6"
 rust_decimal = "1"
 secp256k1 = { version = "0.20", features = [ "bitcoin_hashes", "rand" ] }
 # TODO: See if we can remove this direct dependency
@@ -30,5 +31,6 @@ thiserror = "1"
 [dev-dependencies]
 elements-harness = { git = "https://github.com/comit-network/elements-harness" }
 elements-rpc = { path = "./elements-rpc" }
+rand_chacha = "0.1"
 testcontainers = "0.12"
 tokio = { version = "1", default-features = false, features = [ "macros" ] }
