Update dependencies for stability and compatibility
- With the release of `elements-miniscript:0.1.0` we can now release
`baru` to `crates.io` once again!
- Fixing the git dev-dependency on `elements-harness` to a specific
commit hash should prevent unexpected changes from coming in.
- Depending directly on `rust-elements:0.17.0` and indirectly via
`elements-miniscript` on `rust-elements:0.18.0` caused problems in
certain situations (never in CI). Upgrading to version `0.18.0` has
fixed this.

Given that `baru:0.1.1` could never be released to `crates.io`, didn't
include anything other than internal refactorings and wasn't even
working in certain environments, we've decided to erase it from
history (except in the git history ;).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [ "elements-rpc" ]
 
 [package]
 name = "baru"
-version = "0.1.1"
+version = "0.1.0"
 authors = [ "CoBloX Team <team@coblox.tech>" ]
 edition = "2018"
 license-file = "LICENSE"
@@ -13,8 +13,8 @@ description = "Library to facilitate DeFi on Liquid"
 anyhow = "1"
 bitcoin_hashes = "0.9.0"
 conquer-once = "0.3"
-elements = { version = "0.17", features = [ "serde-feature" ] }
-elements-miniscript = { git = "http://github.com/ElementsProject/elements-miniscript", features = [ "use-serde" ] }
+elements = { version = "0.18", features = [ "serde-feature" ] }
+elements-miniscript = { version = "0.1", features = [ "use-serde" ] }
 env_logger = "0.8.3"
 hex = "0.4"
 hmac = "0.10"
@@ -29,7 +29,7 @@ sha2 = "0.9"
 thiserror = "1"
 
 [dev-dependencies]
-elements-harness = { git = "https://github.com/comit-network/elements-harness" }
+elements-harness = { git = "https://github.com/comit-network/elements-harness", rev = "0c28948c124d68e828e0f27c9202ba278dc04421" }
 elements-rpc = { path = "./elements-rpc" }
 rand_chacha = "0.1"
 testcontainers = "0.12"
