--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.3.0"
 authors = ["CoBloX Team <team@coblox.tech>"]
 edition = "2018"
 license-file = "LICENSE"
+resolver = "2"
 description = "Library to facilitate DeFi on Liquid"
 
 [dependencies]
